Fix sticky hover on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -24,5 +24,10 @@
 			radial-gradient(#e6516d 1px, #fdddd6 1px);
 		background-size: 40px 40px;
 		background-position: 0 0, 20px 20px;
+	
+	}
+
+	.btn-primary {
+		@apply active:shadow-none active:translate-y-[6px] shadow-[0_6px_#9b283d]  transition-all font-bold flex justify-center items-center my-4 py-2 px-6 box-content rounded-lg bg-accent text-light shrink-0 hover-hover:brightness-110 h-fit w-fit ;
 	}
 }
